--- a/app/src/main/res/layout/activity_creation_notes.xml
+++ b/app/src/main/res/layout/activity_creation_notes.xml
@@ -5,38 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="andrew_kuliahin.myapplication.CreationNotes">
+    android:background="@drawable/gradient"
+    tools:context="andrew_kuliahin.myapplication.CreationNotes"
+    app:statusBarBackground="@android:color/transparent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimaryDark"
+        android:background="@android:color/transparent"
         app:popupTheme="@style/AppTheme.PopupOverlay"
         app:title="Journal"
         app:titleMarginStart="20dp"
-        app:logo="@drawable/g4425"
-        />
+        app:logo="?android:attr/actionModeCloseDrawable"
+        android:longClickable="true"
+        android:onClick="onCloseClick" />
+
 
     <ImageButton
         android:layout_width="55dp"
-        android:layout_height="56dp"
-        app:srcCompat="@drawable/ic_info"
+        app:srcCompat="@android:drawable/ic_menu_info_details"
         android:id="@+id/info2"
         app:layout_anchorGravity="bottom|left"
         android:layout_gravity="top|right"
-        android:background="?attr/actionModeSplitBackground"
-        android:onClick="onInfo2Click"/>
+        android:background="@android:color/transparent"
+        android:onClick="onInfo2Click"
+        android:layout_height="55dp" />
 
-    <include layout="@layout/content_creation_notes" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_height="60dp"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_menu_revert"
-        android:layout_width="60dp"
-        app:rippleColor="?android:attr/colorActivatedHighlight" />
+    <include layout="@layout/content_creation_notes"
+        android:id="@+id/include" />
 
 </android.support.design.widget.CoordinatorLayout>
