--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#3cb58a</color>
-    <color name="colorAccent">#f6b331</color>
+    <color name="colorPrimaryDark">#5ab5e6d8</color>
+    <color name="colorAccent">#b580d5</color>
 </resources>
