--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,14 @@
     app:statusBarBackground="@android:color/transparent"
     android:background="@drawable/gradient">
 
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="60dp"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_action_new"
-        app:backgroundTint="@android:color/holo_blue_dark"
-        android:layout_height="60dp"
-        app:rippleColor="@android:color/holo_blue_light"
-        app:elevation="0dp" />
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:id="@+id/header"
+        android:layout_below="@+id/search"
+        android:layout_marginTop="114dp" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -29,7 +26,6 @@
         app:popupTheme="@style/AppTheme.PopupOverlay"
         app:title="Journal"
         app:titleMarginStart="20dp" />
-
 
     <ImageButton
         android:layout_width="55dp"
@@ -42,6 +38,35 @@
         android:onClick="onInfoClick" />
 
     <include layout="@layout/content_main" />
+
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="130dp">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/search"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="12dp"
+            android:id="@+id/list"
+            android:longClickable="true"
+            android:choiceMode="multipleChoice"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="60dp"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:srcCompat="@drawable/ic_action_new"
+            app:backgroundTint="@android:color/holo_blue_dark"
+            android:layout_height="60dp"
+            app:rippleColor="@android:color/holo_blue_light"
+            app:elevation="1dp"
+            />
+
+    </android.support.design.widget.CoordinatorLayout>
 
 
 </android.support.design.widget.CoordinatorLayout>
