--- a/app/src/main/res/layout/content_creation_notes.xml
+++ b/app/src/main/res/layout/content_creation_notes.xml
@@ -48,7 +48,7 @@
         android:clickable="true"
         app:fabSize="normal"
         app:srcCompat="@android:drawable/ic_menu_send"
-        android:id="@+id/floatingActionButton2"
+        android:id="@+id/fab2"
         android:layout_alignTop="@+id/spinner"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="18dp"
@@ -91,7 +91,7 @@
         android:selectAllOnFocus="false"
         android:visibility="visible"
         android:gravity="top"
-        android:layout_below="@+id/floatingActionButton2"
+        android:layout_below="@+id/fab2"
         android:layout_marginTop="16dp"
         android:layout_alignParentBottom="true"
         android:scrollHorizontally="false"
